--- a/asm/73B7.html
+++ b/asm/73B7.html
@@ -27,7 +27,7 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="7396.html">7396</a>
+Prev: <a href="73B6.html">73B6</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#73b7">Map</a></td>
 <td class="next">
@@ -261,7 +261,7 @@ Randomly send controls for the game.
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="7396.html">7396</a>
+Prev: <a href="73B6.html">73B6</a>
 </td>
 <td class="up">Up: <a href="../maps/all.html#73b7">Map</a></td>
 <td class="next">
