--- a/asm/B4DC.html
+++ b/asm/B4DC.html
@@ -35,48 +35,58 @@ Next: <a href="B4EA.html">B4EA</a>
 </td>
 </tr>
 </table>
-<div class="description">B4DC: Data block at B4DC</div>
+<div class="description">B4DC: Actions Jump Table</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
+<div class="paragraph">
+Used by the routine at <a href="6A27.html">6A27</a>.
+</div>
 </div>
 </td>
 </tr>
 <tr>
+<td class="asm-label">JumpTable_Actions</td>
 <td class="address-1"><span id="b4dc"></span>B4DC</td>
 <td class="instruction">DEFW <a href="6F4A.html">Handler_HitWall</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Hit Wall.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="b4de"></span>B4DE</td>
 <td class="instruction">DEFW <a href="6FFD.html">Handler_Downhill</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Downhill.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="b4e0"></span>B4E0</td>
 <td class="instruction">DEFW <a href="6FC0.html">Handler_Jumps</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Jumps.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="b4e2"></span>B4E2</td>
 <td class="instruction">DEFW <a href="6F99.html">Handler_Ice</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Ice.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="b4e4"></span>B4E4</td>
 <td class="instruction">DEFW <a href="6F7D.html">Handler_HitHump</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Hit Hump.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="b4e6"></span>B4E6</td>
 <td class="instruction">DEFW <a href="7048.html">Handler_Refuel</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Refuel.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="b4e8"></span>B4E8</td>
 <td class="instruction">DEFW <a href="751A.html">Handler_HumpJump</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Hump Jump.</td>
 </tr>
 </table>
 <table class="asm-navigation">
