--- a/dec/asm/29622.html
+++ b/dec/asm/29622.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wheelie: Unused RAM at BAF3</title>
+<title>Wheelie: Unused RAM at 29622</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../wheelie.css" />
 <link rel="stylesheet" type="text/css" href="../skoolkit.css" />
@@ -27,15 +27,15 @@ gtag('config', 'G-75RERFCHBG');
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="BAC6.html">BAC6</a>
+Prev: <a href="29590.html">29590</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#baf3">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#29622">Map</a></td>
 <td class="next">
-Next: <a href="BB00.html">BB00</a>
+Next: <a href="29623.html">29623</a>
 </td>
 </tr>
 </table>
-<div class="description">BAF3: Unused</div>
+<div class="description">29622: Unused</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
@@ -44,24 +44,19 @@ Next: <a href="BB00.html">BB00</a>
 </td>
 </tr>
 <tr>
-<td class="address-1"><span id="baf3"></span>BAF3</td>
-<td class="instruction">DEFB $00,$00,$00,$00,$00,$00,$00,$00</td>
-<td class="comment-0" rowspan="1"></td>
-</tr>
-<tr>
-<td class="address-1"><span id="bafb"></span>BAFB</td>
-<td class="instruction">DEFB $00,$00,$00,$00,$00</td>
+<td class="address-1"><span id="29622"></span>29622</td>
+<td class="instruction">DEFB 3</td>
 <td class="comment-0" rowspan="1"></td>
 </tr>
 </table>
 <table class="asm-navigation">
 <tr>
 <td class="prev">
-Prev: <a href="BAC6.html">BAC6</a>
+Prev: <a href="29590.html">29590</a>
 </td>
-<td class="up">Up: <a href="../maps/all.html#baf3">Map</a></td>
+<td class="up">Up: <a href="../maps/all.html#29622">Map</a></td>
 <td class="next">
-Next: <a href="BB00.html">BB00</a>
+Next: <a href="29623.html">29623</a>
 </td>
 </tr>
 </table>
@@ -70,7 +65,7 @@ Next: <a href="BB00.html">BB00</a>
 <div class="copyright">&copy; 1983 Microsphere &copy; 2024 ArcadeGeek LTD.</div>
 <div class="created">Created using <a href="https://skoolkit.ca">SkoolKit</a> 9.1.</div>
 <div class="repository">Link to <a href="https://github.com/pobtastic/wheelie/">Source code</a>.</div>
-<div><a href="../dec/asm/47859.html">Switch to decimal</a>.</div>
+<div><a href="../../asm/73B6.html">Switch to hexadecimal</a>.</div>
 </footer>
 </body>
 </html>
