--- a/dec/asm/46300.html
+++ b/dec/asm/46300.html
@@ -35,48 +35,58 @@ Next: <a href="46314.html">46314</a>
 </td>
 </tr>
 </table>
-<div class="description">46300: Data block at B4DC</div>
+<div class="description">46300: Actions Jump Table</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
 <div class="details">
+<div class="paragraph">
+Used by the routine at <a href="27175.html">27175</a>.
+</div>
 </div>
 </td>
 </tr>
 <tr>
+<td class="asm-label">JumpTable_Actions</td>
 <td class="address-1"><span id="46300"></span>46300</td>
 <td class="instruction">DEFW <a href="28490.html">Handler_HitWall</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Hit Wall.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="46302"></span>46302</td>
 <td class="instruction">DEFW <a href="28669.html">Handler_Downhill</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Downhill.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="46304"></span>46304</td>
 <td class="instruction">DEFW <a href="28608.html">Handler_Jumps</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Jumps.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="46306"></span>46306</td>
 <td class="instruction">DEFW <a href="28569.html">Handler_Ice</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Ice.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="46308"></span>46308</td>
 <td class="instruction">DEFW <a href="28541.html">Handler_HitHump</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Hit Hump.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="46310"></span>46310</td>
 <td class="instruction">DEFW <a href="28744.html">Handler_Refuel</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Refuel.</td>
 </tr>
 <tr>
+<td class="asm-label"></td>
 <td class="address-1"><span id="46312"></span>46312</td>
 <td class="instruction">DEFW <a href="29978.html">Handler_HumpJump</a></td>
-<td class="comment-0" rowspan="1"></td>
+<td class="comment-1" rowspan="1">Handler: Hump Jump.</td>
 </tr>
 </table>
 <table class="asm-navigation">
