--- a/dec/maps/data.html
+++ b/dec/maps/data.html
@@ -189,7 +189,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">220</td>
 <td class="map-w"><span id="46300"></span><a href="../asm/46300.html">46300</a></td>
 <td class="map-w-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46300.html">Data block at B4DC</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46300.html">Actions Jump Table</a></div>
 </td>
 </tr>
 <tr>
@@ -198,14 +198,6 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-b"><span id="46314"></span><a href="../asm/46314.html">46314</a></td>
 <td class="map-b-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46314.html">Data block at B4EA</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">186</td>
-<td class="map-byte">243</td>
-<td class="map-b"><span id="47859"></span><a href="../asm/47859.html">47859</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/47859.html">Data block at BAF3</a></div>
 </td>
 </tr>
 <tr>
@@ -305,35 +297,11 @@ gtag('config', 'G-75RERFCHBG');
 </td>
 </tr>
 <tr>
-<td class="map-page">232</td>
-<td class="map-byte">224</td>
-<td class="map-b"><span id="59616"></span><a href="../asm/59616.html">59616</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/59616.html">Data block at E8E0</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">232</td>
-<td class="map-byte">249</td>
-<td class="map-b"><span id="59641"></span><a href="../asm/59641.html">59641</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/59641.html">Data block at E8F9</a></div>
-</td>
-</tr>
-<tr>
 <td class="map-page">235</td>
 <td class="map-byte">0</td>
 <td class="map-b"><span id="60160"></span><a href="../asm/60160.html">60160</a></td>
 <td class="map-b-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60160.html">User-Defined Keys Input</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">238</td>
-<td class="map-byte">9</td>
-<td class="map-b"><span id="60937"></span><a href="../asm/60937.html">60937</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60937.html">Data block at EE09</a></div>
 </td>
 </tr>
 <tr>
@@ -358,14 +326,6 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-b"><span id="61378"></span><a href="../asm/61378.html">61378</a></td>
 <td class="map-b-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/61378.html">Melody Data: "Ghostrider Has Finished"</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">239</td>
-<td class="map-byte">255</td>
-<td class="map-b"><span id="61439"></span><a href="../asm/61439.html">61439</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/61439.html">Data block at EFFF</a></div>
 </td>
 </tr>
 <tr>
