--- a/dec/maps/unused.html
+++ b/dec/maps/unused.html
@@ -341,6 +341,15 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">115</td>
+<td class="map-byte">182</td>
+<td class="map-u"><span id="29622"></span><a href="../asm/29622.html">29622</a></td>
+<td class="map-length">1</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29622.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">115</td>
 <td class="map-byte">241</td>
 <td class="map-u"><span id="29681"></span><a href="../asm/29681.html">29681</a></td>
 <td class="map-length">1</td>
@@ -457,6 +466,33 @@ gtag('config', 'G-75RERFCHBG');
 </td>
 </tr>
 <tr>
+<td class="map-page">186</td>
+<td class="map-byte">243</td>
+<td class="map-u"><span id="47859"></span><a href="../asm/47859.html">47859</a></td>
+<td class="map-length">13</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/47859.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">232</td>
+<td class="map-byte">224</td>
+<td class="map-u"><span id="59616"></span><a href="../asm/59616.html">59616</a></td>
+<td class="map-length">4</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/59616.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">232</td>
+<td class="map-byte">249</td>
+<td class="map-u"><span id="59641"></span><a href="../asm/59641.html">59641</a></td>
+<td class="map-length">7</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/59641.html">Unused</a></div>
+</td>
+</tr>
+<tr>
 <td class="map-page">235</td>
 <td class="map-byte">255</td>
 <td class="map-u"><span id="60415"></span><a href="../asm/60415.html">60415</a></td>
@@ -499,6 +535,24 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-length">4</td>
 <td class="map-u-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60725.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">238</td>
+<td class="map-byte">9</td>
+<td class="map-u"><span id="60937"></span><a href="../asm/60937.html">60937</a></td>
+<td class="map-length">11</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60937.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">239</td>
+<td class="map-byte">255</td>
+<td class="map-u"><span id="61439"></span><a href="../asm/61439.html">61439</a></td>
+<td class="map-length">1</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/61439.html">Unused</a></div>
 </td>
 </tr>
 </table>
