--- a/maps/all.html
+++ b/maps/all.html
@@ -802,6 +802,14 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">115</td>
+<td class="map-byte">182</td>
+<td class="map-u"><span id="73b6"></span><a href="../asm/73B6.html">73B6</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/73B6.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">115</td>
 <td class="map-byte">183</td>
 <td class="map-c"><span id="73b7"></span><a href="../asm/73B7.html">73B7</a></td>
 <td class="map-c-desc">
@@ -1493,7 +1501,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">220</td>
 <td class="map-w"><span id="b4dc"></span><a href="../asm/B4DC.html">B4DC</a></td>
 <td class="map-w-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4DC.html">Data block at B4DC</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4DC.html">Actions Jump Table</a></div>
 </td>
 </tr>
 <tr>
@@ -1547,9 +1555,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">186</td>
 <td class="map-byte">243</td>
-<td class="map-b"><span id="baf3"></span><a href="../asm/BAF3.html">BAF3</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/BAF3.html">Data block at BAF3</a></div>
+<td class="map-u"><span id="baf3"></span><a href="../asm/BAF3.html">BAF3</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/BAF3.html">Unused</a></div>
 </td>
 </tr>
 <tr>
@@ -1739,9 +1747,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">232</td>
 <td class="map-byte">224</td>
-<td class="map-b"><span id="e8e0"></span><a href="../asm/E8E0.html">E8E0</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/E8E0.html">Data block at E8E0</a></div>
+<td class="map-u"><span id="e8e0"></span><a href="../asm/E8E0.html">E8E0</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/E8E0.html">Unused</a></div>
 </td>
 </tr>
 <tr>
@@ -1763,9 +1771,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">232</td>
 <td class="map-byte">249</td>
-<td class="map-b"><span id="e8f9"></span><a href="../asm/E8F9.html">E8F9</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/E8F9.html">Data block at E8F9</a></div>
+<td class="map-u"><span id="e8f9"></span><a href="../asm/E8F9.html">E8F9</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/E8F9.html">Unused</a></div>
 </td>
 </tr>
 <tr>
@@ -1963,9 +1971,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">238</td>
 <td class="map-byte">9</td>
-<td class="map-b"><span id="ee09"></span><a href="../asm/EE09.html">EE09</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EE09.html">Data block at EE09</a></div>
+<td class="map-u"><span id="ee09"></span><a href="../asm/EE09.html">EE09</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EE09.html">Unused</a></div>
 </td>
 </tr>
 <tr>
@@ -2043,9 +2051,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">239</td>
 <td class="map-byte">255</td>
-<td class="map-b"><span id="efff"></span><a href="../asm/EFFF.html">EFFF</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EFFF.html">Data block at EFFF</a></div>
+<td class="map-u"><span id="efff"></span><a href="../asm/EFFF.html">EFFF</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EFFF.html">Unused</a></div>
 </td>
 </tr>
 <tr>
