--- a/maps/data.html
+++ b/maps/data.html
@@ -189,7 +189,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">220</td>
 <td class="map-w"><span id="b4dc"></span><a href="../asm/B4DC.html">B4DC</a></td>
 <td class="map-w-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4DC.html">Data block at B4DC</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4DC.html">Actions Jump Table</a></div>
 </td>
 </tr>
 <tr>
@@ -198,14 +198,6 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-b"><span id="b4ea"></span><a href="../asm/B4EA.html">B4EA</a></td>
 <td class="map-b-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/B4EA.html">Data block at B4EA</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">186</td>
-<td class="map-byte">243</td>
-<td class="map-b"><span id="baf3"></span><a href="../asm/BAF3.html">BAF3</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/BAF3.html">Data block at BAF3</a></div>
 </td>
 </tr>
 <tr>
@@ -305,35 +297,11 @@ gtag('config', 'G-75RERFCHBG');
 </td>
 </tr>
 <tr>
-<td class="map-page">232</td>
-<td class="map-byte">224</td>
-<td class="map-b"><span id="e8e0"></span><a href="../asm/E8E0.html">E8E0</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/E8E0.html">Data block at E8E0</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">232</td>
-<td class="map-byte">249</td>
-<td class="map-b"><span id="e8f9"></span><a href="../asm/E8F9.html">E8F9</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/E8F9.html">Data block at E8F9</a></div>
-</td>
-</tr>
-<tr>
 <td class="map-page">235</td>
 <td class="map-byte">0</td>
 <td class="map-b"><span id="eb00"></span><a href="../asm/EB00.html">EB00</a></td>
 <td class="map-b-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EB00.html">User-Defined Keys Input</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">238</td>
-<td class="map-byte">9</td>
-<td class="map-b"><span id="ee09"></span><a href="../asm/EE09.html">EE09</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EE09.html">Data block at EE09</a></div>
 </td>
 </tr>
 <tr>
@@ -358,14 +326,6 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-b"><span id="efc2"></span><a href="../asm/EFC2.html">EFC2</a></td>
 <td class="map-b-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EFC2.html">Melody Data: "Ghostrider Has Finished"</a></div>
-</td>
-</tr>
-<tr>
-<td class="map-page">239</td>
-<td class="map-byte">255</td>
-<td class="map-b"><span id="efff"></span><a href="../asm/EFFF.html">EFFF</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EFFF.html">Data block at EFFF</a></div>
 </td>
 </tr>
 <tr>
