--- a/maps/unused.html
+++ b/maps/unused.html
@@ -341,6 +341,15 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">115</td>
+<td class="map-byte">182</td>
+<td class="map-u"><span id="73b6"></span><a href="../asm/73B6.html">73B6</a></td>
+<td class="map-length">1</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/73B6.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">115</td>
 <td class="map-byte">241</td>
 <td class="map-u"><span id="73f1"></span><a href="../asm/73F1.html">73F1</a></td>
 <td class="map-length">1</td>
@@ -457,6 +466,33 @@ gtag('config', 'G-75RERFCHBG');
 </td>
 </tr>
 <tr>
+<td class="map-page">186</td>
+<td class="map-byte">243</td>
+<td class="map-u"><span id="baf3"></span><a href="../asm/BAF3.html">BAF3</a></td>
+<td class="map-length">13</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/BAF3.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">232</td>
+<td class="map-byte">224</td>
+<td class="map-u"><span id="e8e0"></span><a href="../asm/E8E0.html">E8E0</a></td>
+<td class="map-length">4</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/E8E0.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">232</td>
+<td class="map-byte">249</td>
+<td class="map-u"><span id="e8f9"></span><a href="../asm/E8F9.html">E8F9</a></td>
+<td class="map-length">7</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/E8F9.html">Unused</a></div>
+</td>
+</tr>
+<tr>
 <td class="map-page">235</td>
 <td class="map-byte">255</td>
 <td class="map-u"><span id="ebff"></span><a href="../asm/EBFF.html">EBFF</a></td>
@@ -499,6 +535,24 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-length">4</td>
 <td class="map-u-desc">
 <div class="map-entry-title-10"><a class="map-entry-title" href="../asm/ED35.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">238</td>
+<td class="map-byte">9</td>
+<td class="map-u"><span id="ee09"></span><a href="../asm/EE09.html">EE09</a></td>
+<td class="map-length">11</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EE09.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">239</td>
+<td class="map-byte">255</td>
+<td class="map-u"><span id="efff"></span><a href="../asm/EFFF.html">EFFF</a></td>
+<td class="map-length">1</td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/EFFF.html">Unused</a></div>
 </td>
 </tr>
 </table>
