--- a/asm/E8E0.html
+++ b/asm/E8E0.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Wheelie: Data at E8E0</title>
+<title>Wheelie: Unused RAM at E8E0</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../wheelie.css" />
 <link rel="stylesheet" type="text/css" href="../skoolkit.css" />
@@ -17,11 +17,11 @@ gtag('js', new Date());
 gtag('config', 'G-75RERFCHBG');
 </script>
 </head>
-<body class="Asm-b">
+<body class="Asm-u">
 <table class="header">
 <tr>
 <td class="logo"><a href="../index.html"><img alt="logo" src="../images/logo.png" /></a></td>
-<td class="page-header">Data</td>
+<td class="page-header">Unused</td>
 </tr>
 </table>
 <table class="asm-navigation">
@@ -35,7 +35,7 @@ Next: <a href="E8E4.html">E8E4</a>
 </td>
 </tr>
 </table>
-<div class="description">E8E0: Data block at E8E0</div>
+<div class="description">E8E0: Unused</div>
 <table class="disassembly">
 <tr>
 <td class="routine-comment" colspan="5">
