--- a/dec/maps/all.html
+++ b/dec/maps/all.html
@@ -802,6 +802,14 @@ gtag('config', 'G-75RERFCHBG');
 </tr>
 <tr>
 <td class="map-page">115</td>
+<td class="map-byte">182</td>
+<td class="map-u"><span id="29622"></span><a href="../asm/29622.html">29622</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/29622.html">Unused</a></div>
+</td>
+</tr>
+<tr>
+<td class="map-page">115</td>
 <td class="map-byte">183</td>
 <td class="map-c"><span id="29623"></span><a href="../asm/29623.html">29623</a></td>
 <td class="map-c-desc">
@@ -1493,7 +1501,7 @@ gtag('config', 'G-75RERFCHBG');
 <td class="map-byte">220</td>
 <td class="map-w"><span id="46300"></span><a href="../asm/46300.html">46300</a></td>
 <td class="map-w-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46300.html">Data block at B4DC</a></div>
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/46300.html">Actions Jump Table</a></div>
 </td>
 </tr>
 <tr>
@@ -1547,9 +1555,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">186</td>
 <td class="map-byte">243</td>
-<td class="map-b"><span id="47859"></span><a href="../asm/47859.html">47859</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/47859.html">Data block at BAF3</a></div>
+<td class="map-u"><span id="47859"></span><a href="../asm/47859.html">47859</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/47859.html">Unused</a></div>
 </td>
 </tr>
 <tr>
@@ -1739,9 +1747,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">232</td>
 <td class="map-byte">224</td>
-<td class="map-b"><span id="59616"></span><a href="../asm/59616.html">59616</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/59616.html">Data block at E8E0</a></div>
+<td class="map-u"><span id="59616"></span><a href="../asm/59616.html">59616</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/59616.html">Unused</a></div>
 </td>
 </tr>
 <tr>
@@ -1763,9 +1771,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">232</td>
 <td class="map-byte">249</td>
-<td class="map-b"><span id="59641"></span><a href="../asm/59641.html">59641</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/59641.html">Data block at E8F9</a></div>
+<td class="map-u"><span id="59641"></span><a href="../asm/59641.html">59641</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/59641.html">Unused</a></div>
 </td>
 </tr>
 <tr>
@@ -1963,9 +1971,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">238</td>
 <td class="map-byte">9</td>
-<td class="map-b"><span id="60937"></span><a href="../asm/60937.html">60937</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60937.html">Data block at EE09</a></div>
+<td class="map-u"><span id="60937"></span><a href="../asm/60937.html">60937</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/60937.html">Unused</a></div>
 </td>
 </tr>
 <tr>
@@ -2043,9 +2051,9 @@ gtag('config', 'G-75RERFCHBG');
 <tr>
 <td class="map-page">239</td>
 <td class="map-byte">255</td>
-<td class="map-b"><span id="61439"></span><a href="../asm/61439.html">61439</a></td>
-<td class="map-b-desc">
-<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/61439.html">Data block at EFFF</a></div>
+<td class="map-u"><span id="61439"></span><a href="../asm/61439.html">61439</a></td>
+<td class="map-u-desc">
+<div class="map-entry-title-10"><a class="map-entry-title" href="../asm/61439.html">Unused</a></div>
 </td>
 </tr>
 <tr>
